content/terraform-cdk/v0.8.x/docs/cdktf/concepts/tokens.mdx
---
page_title: Tokens
description: >-
  Tokens allow CDK for Terraform to resolve programming language types to
  Terraform language syntax.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-04-29T15:45:46-05:00
last_modified: 2025-04-29T15:45:46-05:00
# END AUTO GENERATED METADATA
---

# Tokens

-> **Note:** CDK for Terraform is currently in [beta](/cdktf#project-maturity-and-production-readiness).

Tokens represent values that are unknown until Terraform applies your configuration. For example, names of cloud resources are only assigned upon creation.

Some attributes specified using CDK for Terraform (CDKTF) may not directly map to the values required for Terraform configurations. You can use [Tokens](https://docs.aws.amazon.com/cdk/latest/guide/tokens.html) to cast these attributes to the correct Terraform language syntax.

## Use Tokens

You may need to use Tokens for:

- [Module outputs](/cdktf/concepts/modules) for boolean, string, lists, maps, and other complex types.
- Resource attributes (such as `id`).
- Terraform outputs based on resource attributes.

### Example

An EKS module requires a _list_ of subnet ids in order to create a cluster. The VPC module outputs a list of subnets.

To pass the subnet id list to the EKS module, you can use `publicSubnetsOutput` to retrieve the list from the VPC. However, the `subnets` attribute
requires a list of strings. Use `Token.asList(vpc.publicSubnetsOutput)` to cast the interpolated module
output as a list of strings.

```typescript
const logRetention = new TerraformVariable(this, "logRetentionInDays", {
  type: "number",
});

const vpc = new Vpc(this, vpcName, {
  name: vpcName,
  publicSubnets: ["10.0.1.0/24", "10.0.2.0/24"],
});

new Eks(this, "EksModule", {
  clusterName: "my-kubernetes-cluster",
  subnets: Token.asList(vpc.publicSubnetsOutput),
  clusterLogRetentionInDays: logRetention.numberValue,
});
```

Initially, CDKTF will resolve `Token.asList(vpc.publicSubnetsOutput)` to `["#{TOKEN[TOKEN.9]}"]` and `logRetention.numberValue` to a big negative number like `-123828381238238`.
Later in synthesis, CDKTF will resolve the token to `${module.<module id>.public_subnets}` and `${var.logRetentionInDays}`.

```json
{
  "module": {
    "helloterraEksModule5DDB67AE": {
      "cluster_name": "my-kubernetes-cluster",
      "subnets": "${module.helloterraMyVpc62D94C17.public_subnets}"
    }
  }
}
```

Refer to the [AWS CDK documentation](https://docs.aws.amazon.com/cdk/latest/guide/tokens.html) for more detailed information about tokens.
